--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@sentry/types": "^7.64.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
+		"@cloudflare/workers-types": "^4.20240725.0",
     "eslint": "^8.47.0",
     "itty-router": "^4.0.22",
-    "typescript": "^5.1.6",
-    "wrangler": "^3.5.1"
+		"typescript": "^5.5.2",
+		"wrangler": "^3.60.3"
   }
 }
